--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                 <a href="index.html" class="btn-header">Back to Home</a>
             </div>
         </div>
-        <div class="nav-bar">
+        <div class="nav-bar" id="navMenu">
             <div class="container">
                 <ul class="nav-menu" style="justify-content:center;">
                     <li class="nav-item"><a href="index.html">Home</a></li>
@@ -39,7 +39,6 @@
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
             <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" target="_blank" class="action-item"><span class="icon icon-insta">📸</span><span>Instagram</span></a>
             <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
@@ -50,7 +49,9 @@
                 <span class="badge" style="position:static; display:inline-block; margin-bottom:15px;">AUTHORIZED DEALER</span>
                 <h2 style="font-size: 2.5rem; color: #1a3b8c; font-family: 'Oswald', sans-serif;">Welcome to Tirumala TVS</h2>
                 <p style="font-size: 1.1rem; line-height: 1.8; color: #555;">
-                    Located in <strong>Bidarahalli, Bangalore</strong>, we are proud to represent TVS Motor Company.
+                    Located in <strong>Bidarahalli, Bangalore</strong>, we are proud to represent TVS Motor Company. 
+                    Our mission is to bring the world-class engineering of TVS to your doorstep with unmatched customer service, 
+                    transparent dealings, and a commitment to your riding joy.
                 </p>
             </div>
         </div>
@@ -58,11 +59,42 @@
 
     <section class="section-padding bg-light">
         <div class="container">
+            <div class="text-center section-header" style="margin-bottom: 50px;">
+                <h2 style="font-family: 'Oswald', sans-serif; color: #d32f2f;">A to Z of TVS Motor Company</h2>
+                <p>From a bus service in 1911 to a global motorcycle giant today.</p>
+            </div>
+
             <div class="history-grid">
-                <div class="history-card"><h3>1911</h3><p>Foundation of TVS Group.</p></div>
-                <div class="history-card"><h3>1980</h3><p>India's First 2-Seater Moped.</p></div>
-                <div class="history-card"><h3>1982</h3><p>Birth of TVS Racing.</p></div>
-                <div class="history-card"><h3>2002</h3><p>Deming Prize Winner.</p></div>
+                <div class="history-card">
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1911</div>
+                    <h3>The Foundation</h3>
+                    <p>Founded by <strong>Shri T.V. Sundaram Iyengar</strong>, the TVS Group began as a bus service in Madurai.</p>
+                </div>
+                <div class="history-card">
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1980</div>
+                    <h3>India's First 2-Seater Moped</h3>
+                    <p>TVS launched the <strong>TVS 50</strong> from its Hosur factory. It was India's first two-seater moped.</p>
+                </div>
+                <div class="history-card">
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1982</div>
+                    <h3>Birth of TVS Racing</h3>
+                    <p>TVS established <strong>TVS Racing</strong>, the first factory racing team in India.</p>
+                </div>
+                <div class="history-card">
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2002</div>
+                    <h3>The Deming Prize</h3>
+                    <p>TVS Motor Company became the <strong>first two-wheeler company in the world</strong> to be awarded the Deming Prize.</p>
+                </div>
+                <div class="history-card">
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2013</div>
+                    <h3>BMW Partnership</h3>
+                    <p>TVS signed a long-term strategic partnership with <strong>BMW Motorrad</strong>.</p>
+                </div>
+                <div class="history-card">
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2020</div>
+                    <h3>Acquisition of Norton</h3>
+                    <p>TVS acquired the iconic British brand <strong>Norton Motorcycles</strong>.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -78,20 +110,16 @@
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                
-                <div class="footer-col">
-                    <h4>Connect With Us</h4>
-                    <ul class="footer-links">
-                        <li><a href="contact.html">Tirumala TVS Bidarahalli</a></li>
-                        <li><a href="https://www.instagram.com/tirumalatvs_bidarahalli/" target="_blank" style="color: #E1306C; font-weight: bold;">Follow us on Instagram ↗</a></li>
-                    </ul>
-                </div>
+                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+
+    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
+    
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
@@ -101,5 +129,6 @@
             else { scrollBtn.classList.remove('visible'); }
         });
     </script>
+
 </body>
 </html>
