--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                     <li class="nav-item"><a href="index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
                     <li class="nav-item"><a href="about.html">About Us</a></li>
                     <li class="nav-item"><a href="contact.html">Contact Us</a></li>
-                    
                     <li class="nav-item dropdown">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
@@ -35,7 +34,6 @@
                             <li><a href="models/ronin.html">Ronin</a></li>
                         </ul>
                     </li>
-
                     <li class="nav-item dropdown">
                         <a href="models.html#scooters">Scooters <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
@@ -45,14 +43,13 @@
                             <li><a href="models/zest110.html">Zest 110</a></li>
                         </ul>
                     </li>
-
                     <li class="nav-item dropdown">
                         <a href="models.html#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/iqube.html">iQube</a></li>
+                            <li><a href="models/iqube.html">iQube Electric</a></li>
+                            <li><a href="models/xl100.html">XL100 Heavy Duty</a></li>
                         </ul>
                     </li>
-
                     <li class="nav-item"><a href="service.html">Services</a></li>
                 </ul>
             </div>
@@ -126,9 +123,7 @@
     </footer>
 
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
