--- a/service.html
+++ b/service.html
@@ -37,68 +37,42 @@
     <section class="service-section">
         <div class="container">
             <div class="service-layout">
-                
                 <div class="service-form">
                     <form action="https://formspree.io/f/xqezrzkn" method="POST">
                         <input type="hidden" name="_next" value="thankyou.html">
-                        <input type="hidden" name="_subject" value="New Service Booking">
-
                         <label>Name <span class="required">*</span></label>
                         <input type="text" name="name" required>
-
                         <label>Phone <span class="required">*</span></label>
                         <input type="tel" name="phone" required>
-
-                        <label>Vehicle Registration No. <span class="required">*</span></label>
+                        <label>Vehicle No. <span class="required">*</span></label>
                         <input type="text" name="vehicle_no" placeholder="KA-00-XX-0000" required>
-
                         <label>Preferred Date <span class="required">*</span></label>
                         <input type="date" name="date" required>
-
-                        <label>Service Type <span class="required">*</span></label>
-                        <select name="service_type" required>
-                            <option value="General Service">General Paid Service</option>
-                            <option value="Free Service">Free Service</option>
-                            <option value="Oil Change">Oil Change Only</option>
-                            <option value="Repair">Repair / Accidental</option>
+                        <label>Service Type</label>
+                        <select name="service_type">
+                            <option>General Service</option>
+                            <option>Free Service</option>
+                            <option>Repair</option>
                         </select>
-
                         <button type="submit" class="btn-submit-service">Confirm Appointment</button>
                     </form>
                 </div>
-
                 <div class="service-info">
                     <h3>How it works</h3>
-                    <div class="step-item"><div class="step-text"><strong>Step 1:</strong> Fill in your details.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 2:</strong> Advisor calls to confirm.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 3:</strong> Drop vehicle at scheduled time.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 4:</strong> We notify you when ready!</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 1:</strong> Fill details.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 2:</strong> Confirmation call.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 3:</strong> Drop vehicle.</div></div>
                 </div>
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
-            </div>
-        </div>
-        <div class="footer-main">
-            <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
-            </div>
-        </div>
-        <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
+        <div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div>
     </footer>
 
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
