--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,11 @@
                 <a href="index.html" class="btn-header">Back to Home</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
-            <div class="container">
+        <div class="nav-bar">
+             <div class="container">
                 <ul class="nav-menu" style="justify-content:center;">
                     <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="about.html">About Us</a></li>
+                    <li class="nav-item"><a href="about.html">About</a></li>
                     <li class="nav-item"><a href="contact.html" style="color:var(--primary);">Contact Us</a></li>
                 </ul>
             </div>
@@ -38,39 +38,24 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" target="_blank" class="action-item"><span class="icon icon-insta">📸</span><span>Instagram</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
 
     <section class="service-section">
         <div class="container">
             <div class="service-layout">
-                
                 <div class="service-form">
                     <h3 style="margin-bottom: 20px;">Send a Message</h3>
                     <form action="https://formspree.io/f/xqezrzkn" method="POST">
                         <input type="hidden" name="_next" value="thankyou.html">
-                        <input type="hidden" name="_subject" value="General Enquiry">
-
                         <label>Name <span class="required">*</span></label>
                         <input type="text" name="name" required>
-
                         <label>Phone <span class="required">*</span></label>
                         <input type="tel" name="phone" required>
-
-                        <label>Type of Enquiry</label>
-                        <select name="type">
-                            <option>General Enquiry</option>
-                            <option>Sales</option>
-                            <option>Service Feedback</option>
-                            <option>Insurance/Finance</option>
-                        </select>
-
                         <label>Message</label>
                         <textarea name="message" rows="4" style="width:100%; padding:10px; border:1px solid #ddd; margin-bottom:20px;"></textarea>
-
                         <button type="submit" class="btn-submit-service">Submit</button>
                     </form>
                 </div>
@@ -78,10 +63,9 @@
                 <div class="service-info">
                     <h3>Visit Showroom</h3>
                     <div class="step-item"><div class="step-text"><strong>Address:</strong><br>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Phone:</strong><br>+91 99649 46512</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Phone:</strong><br>+91 99649 46511</div></div>
                     <div class="step-item"><div class="step-text"><strong>Email:</strong><br>tirumalatvs716@gmail.com</div></div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -90,27 +74,21 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
             </div>
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                
-                <div class="footer-col">
-                    <h4>Connect With Us</h4>
-                    <ul class="footer-links">
-                        <li><a href="contact.html">Tirumala TVS Bidarahalli</a></li>
-                        <li><a href="https://www.instagram.com/tirumalatvs_bidarahalli/" target="_blank" style="color: #E1306C; font-weight: bold;">Follow us on Instagram ↗</a></li>
-                    </ul>
-                </div>
+                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
