--- a/service.html
+++ b/service.html
@@ -29,8 +29,8 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
 
@@ -68,10 +68,23 @@
     </section>
 
     <footer>
-        <div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div>
+        <div class="footer-top-bar">
+            <div class="container footer-contact-row">
+                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
+            </div>
+        </div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
+                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
+                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
+            </div>
+        </div>
+        <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
