--- a/models.html
+++ b/models.html
@@ -74,7 +74,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">BESTSELLER</span>
                         <div class="card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=RTR+160+4V'"></div>
@@ -88,7 +87,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">WICKED</span>
                         <div class="card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'"></div>
@@ -98,34 +96,6 @@
                             <ul class="card-specs"><li>124.8 cc</li><li>TFT Display</li><li>57 kmpl</li></ul>
                             <div class="card-btn-row">
                                 <a href="models/raider.html" class="btn btn-outline">Specs</a>
-                                <a href="testdrive.html" class="btn btn-primary">Test Ride</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <span class="badge">MODERN RETRO</span>
-                        <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
-                        <div class="card-info">
-                            <h3>TVS Ronin</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 1,49,000*</p>
-                            <ul class="card-specs"><li>225.9 cc</li><li>20.4 PS</li><li>USD Forks</li></ul>
-                            <div class="card-btn-row">
-                                <a href="models/ronin.html" class="btn btn-outline">Specs</a>
-                                <a href="testdrive.html" class="btn btn-primary">Test Ride</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <span class="badge">COMMUTER</span>
-                        <div class="card-img"><img src="assets/radeon.jpg" alt="Radeon" onerror="this.src='https://placehold.co/600x400?text=Radeon'"></div>
-                        <div class="card-info">
-                            <h3>TVS Radeon</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 62,000*</p>
-                            <ul class="card-specs"><li>109.7 cc</li><li>65 kmpl</li><li>Digi Cluster</li></ul>
-                            <div class="card-btn-row">
-                                <a href="contact.html" class="btn btn-outline">Enquire</a>
                                 <a href="testdrive.html" class="btn btn-primary">Test Ride</a>
                             </div>
                         </div>
@@ -149,21 +119,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="card">
-                        <span class="badge">COMFORT</span>
-                        <div class="card-img"><img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'"></div>
-                        <div class="card-info">
-                            <h3>Jupiter 125</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 86,000*</p>
-                            <ul class="card-specs"><li>124.8 cc</li><li>2-Helmet Storage</li><li>Neo-Masculine</li></ul>
-                            <div class="card-btn-row">
-                                <a href="models/jupiter125.html" class="btn btn-outline">Specs</a>
-                                <a href="testdrive.html" class="btn btn-primary">Test Ride</a>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="card">
                         <span class="badge">CONNECTED</span>
                         <div class="card-img"><img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
@@ -181,7 +136,7 @@
             </div>
 
             <div id="electric" style="margin-bottom: 80px;">
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 2.5rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">Electric & Mopeds</h2>
+                <h2 style="font-family: 'Oswald', sans-serif; font-size: 2.5rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">Electric</h2>
                 <div class="grid-3">
                     <div class="card">
                         <span class="badge">ELECTRIC</span>
@@ -196,20 +151,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="card">
-                        <span class="badge">HEAVY DUTY</span>
-                        <div class="card-img"><img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'"></div>
-                        <div class="card-info">
-                            <h3>XL100 Heavy Duty</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 46,000*</p>
-                            <ul class="card-specs"><li>99.7 cc</li><li>Touch Start</li><li>Rugged Body</li></ul>
-                            <div class="card-btn-row">
-                                <a href="models/xl100.html" class="btn btn-outline">Specs</a>
-                                <a href="testdrive.html" class="btn btn-primary">Test Ride</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -220,7 +161,7 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
             </div>
         </div>
         <div class="footer-main">
@@ -233,7 +174,7 @@
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
