--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
 
@@ -50,8 +50,7 @@
                 <h2 style="font-size: 2.5rem; color: #1a3b8c; font-family: 'Oswald', sans-serif;">Welcome to Tirumala TVS</h2>
                 <p style="font-size: 1.1rem; line-height: 1.8; color: #555;">
                     Located in <strong>Bidarahalli, Bangalore</strong>, we are proud to represent TVS Motor Company. 
-                    Our mission is to bring the world-class engineering of TVS to your doorstep with unmatched customer service, 
-                    transparent dealings, and a commitment to your riding joy.
+                    Our mission is to bring the world-class engineering of TVS to your doorstep with unmatched customer service.
                 </p>
             </div>
         </div>
@@ -65,36 +64,12 @@
             </div>
 
             <div class="history-grid">
-                <div class="history-card">
-                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1911</div>
-                    <h3>The Foundation</h3>
-                    <p>Founded by <strong>Shri T.V. Sundaram Iyengar</strong>, the TVS Group began as a bus service in Madurai.</p>
-                </div>
-                <div class="history-card">
-                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1980</div>
-                    <h3>India's First 2-Seater Moped</h3>
-                    <p>TVS launched the <strong>TVS 50</strong> from its Hosur factory. It was India's first two-seater moped.</p>
-                </div>
-                <div class="history-card">
-                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1982</div>
-                    <h3>Birth of TVS Racing</h3>
-                    <p>TVS established <strong>TVS Racing</strong>, the first factory racing team in India.</p>
-                </div>
-                <div class="history-card">
-                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2002</div>
-                    <h3>The Deming Prize</h3>
-                    <p>TVS Motor Company became the <strong>first two-wheeler company in the world</strong> to be awarded the Deming Prize.</p>
-                </div>
-                <div class="history-card">
-                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2013</div>
-                    <h3>BMW Partnership</h3>
-                    <p>TVS signed a long-term strategic partnership with <strong>BMW Motorrad</strong>.</p>
-                </div>
-                <div class="history-card">
-                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2020</div>
-                    <h3>Acquisition of Norton</h3>
-                    <p>TVS acquired the iconic British brand <strong>Norton Motorcycles</strong>.</p>
-                </div>
+                <div class="history-card"><h3>1911</h3><p>Foundation of TVS Group.</p></div>
+                <div class="history-card"><h3>1980</h3><p>India's First 2-Seater Moped.</p></div>
+                <div class="history-card"><h3>1982</h3><p>Birth of TVS Racing.</p></div>
+                <div class="history-card"><h3>2002</h3><p>Deming Prize Winner.</p></div>
+                <div class="history-card"><h3>2013</h3><p>BMW Partnership.</p></div>
+                <div class="history-card"><h3>2020</h3><p>Acquisition of Norton.</p></div>
             </div>
         </div>
     </section>
@@ -103,7 +78,7 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
             </div>
         </div>
         <div class="footer-main">
@@ -116,10 +91,8 @@
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-
+    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
