--- a/testdrive.html
+++ b/testdrive.html
@@ -29,59 +29,37 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
 
     <section class="service-section">
         <div class="container">
             <div class="service-layout">
-                
                 <div class="service-form">
                     <form action="https://formspree.io/f/xqezrzkn" method="POST">
                         <input type="hidden" name="_next" value="thankyou.html">
-                        <input type="hidden" name="_subject" value="New Test Drive Request">
-
                         <label>Full Name <span class="required">*</span></label>
-                        <input type="text" name="name" required>
-
+                        <input type="text" name="name" placeholder="Enter your name" required>
                         <label>Phone Number <span class="required">*</span></label>
-                        <input type="tel" name="phone" required>
-
-                        <label>Select Model <span class="required">*</span></label>
+                        <input type="tel" name="phone" placeholder="Enter phone number" required>
+                        <label>Select Model</label>
                         <select name="model" required>
-                            <option value="" disabled selected>Choose Bike/Scooter</option>
-                            <option value="Apache 160 4V">Apache RTR 160 4V</option>
-                            <option value="Apache 200 4V">Apache RTR 200 4V</option>
-                            <option value="Raider 125">Raider 125</option>
-                            <option value="Ronin">Ronin</option>
-                            <option value="Jupiter 110">Jupiter 110</option>
-                            <option value="Jupiter 125">Jupiter 125</option>
-                            <option value="Ntorq 125">Ntorq 125</option>
-                            <option value="iQube">iQube Electric</option>
+                            <option value="Apache 160">Apache RTR 160</option>
+                            <option value="Jupiter">Jupiter</option>
+                            <option value="Ntorq">Ntorq</option>
                         </select>
-
-                        <label>Preferred Date <span class="required">*</span></label>
+                        <label>Preferred Date</label>
                         <input type="date" name="date" required>
-
-                        <label>Valid Driving License? <span class="required">*</span></label>
-                        <select name="license_check" required>
-                            <option value="Yes">Yes, I have a license</option>
-                            <option value="No">No, I do not have a license</option>
-                        </select>
-
-                        <button type="submit" class="btn-submit-service" style="background-color: #e31e2d;">Book Test Ride</button>
+                        <button type="submit" class="btn-submit-service">Book Test Ride</button>
                     </form>
                 </div>
-
                 <div class="service-info">
                     <h3>Important Information</h3>
                     <div class="step-item"><div class="step-text"><strong>Step 1: License Mandatory</strong><br>Please carry a valid driving license.</div></div>
                     <div class="step-item"><div class="step-text"><strong>Step 2: Safety First</strong><br>A helmet will be provided for the rider.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 3: Confirmation</strong><br>Our team will call to confirm vehicle availability.</div></div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -90,7 +68,7 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
             </div>
         </div>
         <div class="footer-main">
@@ -103,10 +81,8 @@
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-
+    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
