--- a/quotation.html
+++ b/quotation.html
@@ -29,55 +29,41 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
 
     <section class="service-section">
         <div class="container">
             <div class="service-layout">
-                
                 <div class="service-form">
                     <form action="https://formspree.io/f/xqezrzkn" method="POST">
                         <input type="hidden" name="_next" value="thankyou.html">
-                        <input type="hidden" name="_subject" value="New Quotation Request">
-
                         <label>Full Name <span class="required">*</span></label>
                         <input type="text" name="name" required>
-
                         <label>Phone Number <span class="required">*</span></label>
                         <input type="tel" name="phone" required>
-
-                        <label>Select Model <span class="required">*</span></label>
+                        <label>Select Model</label>
                         <select name="model" required>
-                            <option value="" disabled selected>Select Bike</option>
                             <option value="Apache Series">Apache Series</option>
                             <option value="Jupiter Series">Jupiter Series</option>
                             <option value="Ntorq">Ntorq</option>
-                            <option value="Raider">Raider</option>
-                            <option value="Ronin">Ronin</option>
-                            <option value="iQube">iQube</option>
-                            <option value="XL100">XL100</option>
                         </select>
-
-                        <label>Plan <span class="required">*</span></label>
+                        <label>Plan</label>
                         <select name="plan">
                             <option value="Cash">Cash</option>
                             <option value="Finance">Finance/EMI</option>
                         </select>
-
                         <button type="submit" class="btn-submit-service">Request Quote</button>
                     </form>
                 </div>
-
                 <div class="service-info">
                     <h3>Why buy from us?</h3>
                     <div class="step-item"><div class="step-text">✓ Best On-Road Prices</div></div>
                     <div class="step-item"><div class="step-text">✓ Quick Finance Approvals</div></div>
                     <div class="step-item"><div class="step-text">✓ Fast Delivery</div></div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -86,7 +72,7 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
             </div>
         </div>
         <div class="footer-main">
@@ -99,10 +85,8 @@
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-
+    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
