--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Sales</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">🔧</span><span>Call Service</span></a>
         </div>
     </div>
 
@@ -108,8 +109,17 @@
     <footer>
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
+                <div class="footer-contact-item">
+                    <div class="footer-icon-circle">✉</div>
+                    <div class="footer-contact-text">tirumalatvs716@gmail.com</div>
+                </div>
+                <div class="footer-contact-item">
+                    <div class="footer-icon-circle">📞</div>
+                    <div>
+                        <div class="footer-contact-text">Sales: +91 99649 46512</div>
+                        <div class="footer-contact-text" style="font-size: 0.9em; opacity: 0.9;">Service: +91 99649 46511</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer-main">
@@ -122,7 +132,7 @@
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
